Fixed outputting of $spacing-unit variable

--- a/site/web/app/themes/host/assets/sass/components/_primary-offcanvas.scss
+++ b/site/web/app/themes/host/assets/sass/components/_primary-offcanvas.scss
@@ -123,7 +123,7 @@
 // ==========================================================================
 .primary-offcanvas__section {
     width: 100%;
-    margin: spacing-unit rem(25) 0 0;
+    margin: $spacing-unit rem(25) 0 0;
 
     &:last-child {
         display: flex;
